Move if_get_counter initialization from if_attach into if_alloc. Also, initialize all counters before ifnet will become available in the system. This fixes possible access to uninitialized ifned fields.

PR:		194550


git-svn-id: svn+ssh://svn.freebsd.org/base/head@273547 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f